cleaned up some unneccessary code

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,5 +33,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "css-loader": "^3.6.0",
+    "style-loader": "^1.2.1"
+  }
 }
